--- a/beta/index.html
+++ b/beta/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scanable=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/main.js"></script>
     <title>NightSky</title>
 </head>
 
