--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scanable=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>NightSky</title>
+    <title>Glaze</title>
 </head>
 
 <body>
     <div class="main">
-
+        <div class="header">
+            <h1>:3</h1>
+        </div>
     </div>
 </body>
 
