--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scanable=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="images/favicon.ico" />
     <title>Glaze</title>
 </head>
 
@@ -10,6 +11,23 @@
     <div class="main">
         <div class="header">
             <h1>:3</h1>
+            <p></p>
+        </div>
+        <div class="content">
+            <div class="content-item">
+                <h2><a href="http://shinx.net/">ShinxWeb</a></h2>
+                <p>Shinx site I own for no real reason. Also accessible <a href="https://glazelf.github.io/ShinxWeb/">on
+                        GitHub</a>.</p>
+            </div>
+            <div class="content-item">
+                <h2><a href="http://shinx.net/translator">Shinx Translator</a></h2>
+                <p>Translates text to Shinx emotes available <a href="https://discord.gg/2gkybyu">on Discord</a>. Also
+                    available <a href="https://glazelf.github.io/ShinxWeb/">on GitHub</a>.</p>
+            </div>
+            <div class="content-item">
+                <h2><a href="https://glazelf.github.io/NightSky/"">NightSky</a></h2>
+                <p>WIP project where I mess around with CSS to make a pretty background. Maybe.</p>
+            </div>
         </div>
     </div>
 </body>
