--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="content-item">
                 <h2><a href="https://glazelf.github.io/NightSky/"">NightSky</a></h2>
-                <p>WIP project where I mess around with CSS to make a pretty background. Maybe.</p>
+                <p>Messing around with CSS to make a pretty background. I hate CSS.</p>
             </div>
         </div>
     </div>
