--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <div class="content">
             <div class="content-item">
                 <h2>:3</h2>
-                <p>:3</p>
+                <h3>:3</h3>
+                <p>:3</p> <!-- Identical to h4 -->
+                <h5>:3</h5>
+                <h6>:3</h6>
             </div>
         </div>
     </div>
