Import JS and add comment

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scanable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scanable=no"> <!-- user-scanable prevents zooming on mobile devices -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/main.js"></script>
     <link rel="icon" href="images/favicon.ico" />
     <title>Glaze</title>
 </head>
